--- a/components/inicio.html
+++ b/components/inicio.html
@@ -8,10 +8,10 @@
   >
     <center>
       <font face="sans-serif" color="#0d0d0d" size="+4">
-        <h2>Bienvenidos</h2>
+        <h2>Bienvenid@s</h2>
       </font>
       <font face="sans-serif" color="#0d0d0d" size="+3">
-        <h3>Soy Desarrollador Web Frontend</h3>
+        <h3>Soy <font color="#0468bf">Desarrollador Web Frontend</font></h3>
       </font>
     </center>
   </body>
