--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,26 +1,31 @@
 <html>
   <head></head>
   <body bgcolor="#f2f2f2" topmargin="0" leftmargin="0">
+    <!-- NavBar  -->
     <table border="0" align="center" height="100%" width="100%">
       <tr>
+        <!-- Logotipo -->
         <th>
-          <img src="../assets/favicon.png" width="70px" /> <br />
-          <font face="Arial" size="+2" color="#0d0d0d">
+          <a href="inicio.html" target="contenido">
+            <img src="../assets/favicon.png" width="70px" /> <br />
+          </a>
+          <font face="sans-serif" size="+2" color="#0d0d0d">
             Sebastián Developer
           </font>
         </th>
+        <!-- Opciones de Navegación -->
         <td>
-          <a href="">
+          <a href="about.html" target="contenido">
             <img src="../assets/button_sobre-mi.png" />
           </a>
         </td>
         <td>
-          <a href="">
+          <a href="servicios.html" target="contenido">
             <img src="../assets/button_servicios.png" alt="" />
           </a>
         </td>
         <td>
-          <a href="">
+          <a href="portafolio.html" target="contenido">
             <img src="../assets/button_portafolio.png" alt="" />
           </a>
         </td>
