--- a/components/navbar.html
+++ b/components/navbar.html
@@ -10,7 +10,7 @@
             <img src="../assets/favicon.png" width="70px" /> <br />
           </a>
           <font face="sans-serif" size="+2" color="#0d0d0d">
-            Sebastián Developer
+            <b>Sebastián Developer</b>
           </font>
         </th>
         <!-- Opciones de Navegación -->
