--- a/components/about.html
+++ b/components/about.html
@@ -5,5 +5,36 @@
       <h3>Sobre Mi</h3>
       <hr width="30%" align="left" noshade />
     </font>
+    <font face="sans-serif">
+      <table border="0" width="100%" cellpadding="20">
+        <tr>
+          <th width="50%">
+            <img src="../assets/undraw_web_developer_p3e5.svg" alt="" />
+          </th>
+          <td width="50%">
+            <center>
+              <img
+                src="../assets/imagen_curriculum.jpg"
+                width="150px"
+                height="150px"
+                style="border-radius: 50%"
+              />
+            </center>
+            <br />
+            <font size="+1  ">
+              <hr width="40%" />
+              <p>
+                Soy estudiante y me apasiona el mundo del Diseño y Desarrollo
+                Web. Desde muy pequeño veia y me impresionaba lo que se puede
+                hacer con la informática. Me gusta aprender por mi mismo y
+                seguir preparandome dia a dia para poder ser un Desarrollador
+                Web FullStack y poder tarabajar en proyectos mas grandes y
+                compartir mis conocimientos.
+              </p>
+            </font>
+          </td>
+        </tr>
+      </table>
+    </font>
   </body>
 </html>
