--- a/components/inicio.html
+++ b/components/inicio.html
@@ -1,16 +1,16 @@
 <html>
   <head></head>
   <body
-    background="../assets/fondo_inicio_2.jpg"
+    background="../assets/fondo_alpha.jpg"
     width="100%"
     height="100%"
     topmargin="180px"
   >
     <center>
-      <font face="sans-serif" color="#0d0d0d" size="+4">
+      <font face="sans-serif" color="#fff" size="+4">
         <h2>Bienvenid@s</h2>
       </font>
-      <font face="sans-serif" color="#0d0d0d" size="+3">
+      <font face="sans-serif" color="#fff" size="+3">
         <h3>Soy <font color="#0468bf">Desarrollador Web Frontend</font></h3>
       </font>
     </center>
