--- a/components/navbar.html
+++ b/components/navbar.html
@@ -30,7 +30,7 @@
           </a>
         </td>
         <td>
-          <a href="">
+          <a href="curriculum.html" target="contenido">
             <img src="../assets/button_curriculum.png" />
           </a>
         </td>
