--- a/components/servicios.html
+++ b/components/servicios.html
@@ -5,5 +5,43 @@
       <h3>Servicios</h3>
       <hr width="30%" align="left" noshade />
     </font>
+    <font face="sans-serif">
+      <table border="0" width="100%">
+        <tr>
+          <th>
+            <img src="../assets/undraw_responsive_6c8s.svg" alt="" />
+            <hr width="40%" noshade="" />
+            <h3>Design Responsive</h3>
+          </th>
+          <th>
+            <img src="../assets/undraw_Marketing_re_7f1g.svg" alt="" />
+            <hr width="40%" noshade="" />
+            <h3>Marketing</h3>
+          </th>
+          <th>
+            <img src="../assets/undraw_Landing_page_re_6xev.svg" alt="" />
+            <hr width="40%" noshade="" />
+            <h3>Landing Page</h3>
+          </th>
+        </tr>
+        <tr>
+          <th>
+            <img src="../assets/undraw_web_devices_ad58.svg" alt="" />
+            <hr width="40%" noshade="" />
+            <h3>Web Device</h3>
+          </th>
+          <th>
+            <img src="../assets/undraw_Search_re_x5gq.svg" alt="" />
+            <hr width="40%" noshade="" />
+            <h3>SEO</h3>
+          </th>
+          <th>
+            <img src="../assets/undraw_Logo_design_re_gfu6.svg" alt="" />
+            <hr width="40%" noshade="" />
+            <h3>Logo Design</h3>
+          </th>
+        </tr>
+      </table>
+    </font>
   </body>
 </html>
