--- a/components/navbar.html
+++ b/components/navbar.html
@@ -25,8 +25,8 @@
           </a>
         </td>
         <td>
-          <a href="portafolio.html" target="contenido">
-            <img src="../assets/button_portafolio.png" alt="" />
+          <a href="contactame.html" target="contenido">
+            <img src="../assets/button_contactame.png" alt="" />
           </a>
         </td>
         <td>
